--- a/.github/workflows/aggtrades-incremental.yml
+++ b/.github/workflows/aggtrades-incremental.yml
@@ -39,9 +39,7 @@ jobs:
       - name: Calculate dates
         id: dates
         run: |
-          # globaler Startpunkt (fix für 2025)
           echo "global_start=2025-01-01" >> $GITHUB_OUTPUT
-          # End = gestern
           echo "today=$(date -I -d 'yesterday')" >> $GITHUB_OUTPUT
 
       - name: Determine resume point
@@ -49,10 +47,8 @@ jobs:
         run: |
           SYMBOL=${{ matrix.symbol }}
           DIR=features/aggTrades/${SYMBOL}
-          # suche letzte Parquet
           last=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$last" ]]; then
-            # extract end date
             prev_end=$(basename "$last" .parquet | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
             start=$(date -I -d "$prev_end + 1 day")
           else
@@ -68,7 +64,6 @@ jobs:
           SD=${{ steps.resume.outputs.start }}
           ED=${{ steps.resume.outputs.end }}
 
-          # Inception-Logik je Symbol
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT) INC="2019-12-31";;
             XRPUSDT)         INC="2020-01-06";;
@@ -79,18 +74,13 @@ jobs:
           esac
           [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]] && SD="$INC"
 
-          echo "→ Downloading aggTrades $SYMBOL from $SD to $ED (incl. overlap)"
           mkdir -p data/aggTrades/$SYMBOL
           CUR=$(date -I -d "$SD -1 day")
           while [[ "$CUR" <= "$ED" ]]; do
             ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
-            echo "→ Fetching $ZIP"
             if curl -sSf "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$ZIP" -o "$ZIP"; then
               unzip -p "$ZIP" > data/aggTrades/"$SYMBOL"/"${ZIP%.zip}.csv"
-              rm -f "$ZIP"
-            else
-              echo "⚠️ Missing $ZIP – skipping"
-              rm -f "$ZIP"
+              rm "$ZIP"
             fi
             CUR=$(date -I -d "$CUR +1 day")
           done
@@ -98,45 +88,43 @@ jobs:
       - name: Merge into Parquet & append
         shell: bash
         run: |
-          set -euo pipefail
-
           SYMBOL=${{ matrix.symbol }}
           GS=${{ steps.dates.outputs.global_start }}
           NE=${{ steps.resume.outputs.end }}
           DIR=features/aggTrades/${SYMBOL}
-          mkdir -p $DIR
+          mkdir -p "$DIR"
 
-          OLD=$DIR/${SYMBOL}-features-${GS}_to_*.parquet
-          OUT=$DIR/${SYMBOL}-features-${GS}_to_${NE}.parquet
+          OLD_PATTERN="$DIR/${SYMBOL}-features-${GS}_to_*.parquet"
+          TMP_FILE=$(mktemp --suffix=.parquet)
+          OUT_FILE="$DIR/${SYMBOL}-features-${GS}_to_${NE}.parquet"
 
-          # 1) erzeuge only-new in tmp
-          TMP=$(mktemp --suffix=.parquet)
+          # neue Tage extrahieren
           python3 extract_aggTrades_features.py \
             --input-dir data/aggTrades/${SYMBOL} \
             --start-date "${{ steps.resume.outputs.start }}" \
-            --end-date   "${NE}" \
-            --output-file "$TMP"
+            --end-date "${NE}" \
+            --output-file "$TMP_FILE"
 
-          # 2) merge mit altem, lösche altes
-          if compgen -G "$OLD" > /dev/null; then
+          # falls altes File existiert, zusammenführen
+          if compgen -G "$OLD_PATTERN" > /dev/null; then
+            EXISTING=$(ls $OLD_PATTERN)
             python3 - <<EOF
 import pandas as pd
-old = pd.read_parquet("$OLD")
-new = pd.read_parquet("$TMP")
+old = pd.read_parquet("${EXISTING}")
+new = pd.read_parquet("${TMP_FILE}")
 df  = pd.concat([old, new]).sort_index()
-df.to_parquet("$OUT", compression="snappy")
+df.to_parquet("${OUT_FILE}", compression="snappy")
 EOF
-            rm $OLD
+            rm "${EXISTING}"
           else
-            mv $TMP $OUT
+            mv "${TMP_FILE}" "${OUT_FILE}"
           fi
-          rm -f $TMP
 
-          git add $OUT
+          git add "${OUT_FILE}"
 
       - name: Commit & Push
         run: |
-          git config user.name  "github-actions[bot]"
+          git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout main
           git pull --rebase origin main
@@ -144,5 +132,5 @@ EOF
           git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:main
 
       - name: Cleanup raw CSVs
-        if: always()
+        if: ${{ always() }}
         run: rm -rf data/aggTrades/${{ matrix.symbol }}
